Fix link colour for "Collapse Correspondence" not applying (h/t Merrin for final fix)

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -124,6 +124,7 @@ body{
 }
 
 a {
+  .action-menu__menu__item &,
   &:link,
   &:visited {
     color: $link-color;
